--- a/.github/workflows/main_c.yml
+++ b/.github/workflows/main_c.yml
@@ -4,7 +4,10 @@ on:
   push:
     branches: [ main ]  # Adjust to your default branch if not 'main'
   pull_request:
-    branches: [ main ]
+     branches:
+      - main
+      - 'releases/**' 
+    
 
 jobs:
   compile:
